--- a/demo.html
+++ b/demo.html
@@ -3,38 +3,42 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite — Premium Demo</title>
+<title>ZenSite | Demo Premium</title>
 
 <style>
 :root{
   --bg:#050505;
+  --glass:rgba(18,18,18,.88);
   --line:rgba(255,255,255,.12);
-  --glass:rgba(20,20,20,.78);
   --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
-  --r:26px;
+  --radius:26px;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
-  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:radial-gradient(800px 400px at 50% 0%, rgba(0,140,255,.25), transparent 60%), var(--bg);
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",system-ui,sans-serif;
+  background:var(--bg);
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ================= HEADER ================= */
+/* ===== HEADER ===== */
 .header{
-  position:fixed; top:0; left:0; width:100%;
+  position:fixed;
+  top:0; left:0; width:100%;
   padding:18px 22px;
-  display:flex; justify-content:space-between; align-items:center;
-  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.25), transparent);
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.35), transparent);
   z-index:1000;
 }
 .brand{
   font-size:22px;
   font-weight:900;
-  letter-spacing:.5px;
+  letter-spacing:.4px;
 }
 .langs span{
   cursor:pointer;
@@ -44,9 +48,9 @@ body{
 }
 .langs span.active{opacity:1}
 
-/* ================= HERO ================= */
+/* ===== HERO ===== */
 .hero{
-  padding:150px 8% 100px;
+  padding:150px 8% 120px;
 }
 .hero h1{
   font-size:clamp(42px,6vw,74px);
@@ -54,25 +58,25 @@ body{
   line-height:1.02;
 }
 .hero p{
-  margin-top:20px;
-  max-width:820px;
+  margin-top:18px;
+  max-width:900px;
   font-size:18px;
   color:var(--muted);
 }
 
-/* ================= SLIDER ================= */
+/* ===== SLIDER ===== */
 .slider{
-  margin:70px auto 0;
+  margin:80px auto 0;
   max-width:1200px;
-  border-radius:var(--r);
-  overflow:hidden;
+  border-radius:var(--radius);
   border:1px solid var(--line);
+  overflow:hidden;
   background:#000;
   box-shadow:0 40px 120px rgba(0,0,0,.75);
 }
 .track{
   display:flex;
-  transition:transform .7s cubic-bezier(.2,.9,.2,1);
+  transition:transform .65s cubic-bezier(.2,.9,.2,1);
 }
 .slide{
   min-width:100%;
@@ -80,41 +84,42 @@ body{
 }
 .slide img{
   width:100%;
-  height:520px;
+  height:clamp(340px,52vh,540px);
   object-fit:cover;
-  filter:contrast(1.05) saturate(1.05);
-  transition:transform .6s ease;
+  display:block;
 }
-.slide:hover img{transform:scale(1.04)}
-.tag{
-  position:absolute; top:16px; left:16px;
-  background:rgba(0,0,0,.6);
-  border:1px solid rgba(255,255,255,.25);
+.slide span{
+  position:absolute;
+  top:16px; left:16px;
+  background:rgba(0,0,0,.65);
+  border:1px solid var(--line);
   padding:8px 14px;
   border-radius:999px;
-  font-weight:900;
-}
-.hint{
-  position:absolute; top:16px; right:16px;
-  font-size:12px;
-  opacity:.75;
+  font-weight:800;
+  font-size:13px;
 }
 
-/* ================= STATS ================= */
+/* ===== STATS ===== */
 .stats{
-  margin:90px auto 0;
-  max-width:1200px;
+  margin-top:90px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
+  gap:22px;
 }
 .stat{
   background:var(--glass);
   border:1px solid var(--line);
   border-radius:22px;
-  padding:34px 18px;
+  padding:36px 18px;
   text-align:center;
   backdrop-filter:blur(14px);
+  opacity:0;
+  transform:translateY(14px);
+  transition:.6s ease;
+}
+.stat.show{
+  opacity:1;
+  transform:translateY(0);
 }
 .stat strong{
   font-size:46px;
@@ -122,84 +127,82 @@ body{
 }
 .stat span{
   display:block;
-  margin-top:6px;
+  margin-top:8px;
+  font-weight:800;
   color:var(--muted2);
-  font-weight:900;
 }
 
-/* ================= ELITE ================= */
-.elite{
-  margin:120px auto 0;
-  max-width:900px;
+/* ===== FINAL TEXT ===== */
+.final{
+  margin:120px auto 80px;
+  max-width:920px;
   text-align:center;
 }
-.elite h2{
-  font-size:34px;
-  font-weight:900;
+.final h2{
+  font-size:36px;
+  font-weight:950;
+  margin-bottom:18px;
 }
-.elite p{
-  margin-top:18px;
-  font-size:18px;
+.final p{
+  font-size:17px;
   color:var(--muted);
+  line-height:1.6;
 }
 
-/* ================= FOOTER ================= */
+/* ===== FOOTER ===== */
 footer{
-  margin-top:120px;
-  padding:28px;
   text-align:center;
+  padding:34px 20px;
   font-size:13px;
   opacity:.55;
+  border-top:1px solid var(--line);
 }
 
-/* ================= FLOATING DEMOS ================= */
-.floats{
+/* ===== FLOATING BUTTONS ===== */
+.floating{
   position:fixed;
-  bottom:22px;
-  left:50%;
-  transform:translateX(-50%);
+  right:18px;
+  bottom:18px;
   display:flex;
+  flex-direction:column;
   gap:12px;
-  z-index:9999;
+  z-index:2000;
 }
-.float{
+.floating a{
   padding:14px 18px;
   border-radius:999px;
-  border:1px solid rgba(255,255,255,.25);
-  background:rgba(0,0,0,.75);
-  backdrop-filter:blur(14px);
+  background:#111;
+  border:1px solid var(--line);
+  color:#fff;
   font-weight:900;
-  cursor:pointer;
+  font-size:13px;
+  text-decoration:none;
+  box-shadow:0 20px 40px rgba(0,0,0,.6);
   transition:.25s ease;
-  white-space:nowrap;
 }
-.float:hover{
+.floating a:hover{
+  transform:translateY(-2px);
   background:#fff;
   color:#000;
-  transform:translateY(-2px);
-  box-shadow:0 20px 40px rgba(255,255,255,.25);
 }
 
-/* ================= SMOKE ================= */
-.smoke{
+/* ===== PAGE TRANSITION ===== */
+#transition{
   position:fixed;
   inset:0;
+  background:#050505;
+  opacity:0;
   pointer-events:none;
-  background:
-    radial-gradient(500px 300px at 20% 20%, rgba(255,255,255,.04), transparent 70%),
-    radial-gradient(500px 300px at 80% 80%, rgba(255,255,255,.03), transparent 70%);
-  animation:drift 16s ease-in-out infinite alternate;
+  transition:opacity .35s ease;
+  z-index:9999;
 }
-@keyframes drift{
-  from{transform:translateY(0)}
-  to{transform:translateY(-20px)}
-}
+#transition.active{opacity:1}
 </style>
 </head>
 
 <body>
 
-<div class="smoke"></div>
+<div id="transition"></div>
 
 <header class="header">
   <div class="brand">ZenSite</div>
@@ -210,63 +213,89 @@ footer{
 </header>
 
 <section class="hero">
-  <h1>Esto no es una web.<br>Es presencia digital.</h1>
+  <h1>Demostraciones Premium</h1>
   <p>
-    Demos reales de sitios premium diseñados para vender,
-    generar confianza y diferenciar negocios serios.
+    Ejemplos reales de páginas web, tiendas online y sistemas diseñados
+    para convertir clientes y elevar la presencia digital de cualquier negocio.
   </p>
 
   <div class="slider">
     <div class="track" id="track">
-      <div class="slide"><span class="tag">Landing</span><span class="hint">Toca</span><img src="demo1.jpg"></div>
-      <div class="slide"><span class="tag">Web</span><span class="hint">Toca</span><img src="demo2.jpg"></div>
-      <div class="slide"><span class="tag">Store</span><span class="hint">Toca</span><img src="demo3.jpg"></div>
+      <div class="slide"><span>Home Page</span><img src="demo1.jpg"></div>
+      <div class="slide"><span>Store</span><img src="demo2.jpg"></div>
+      <div class="slide"><span>Store 2</span><img src="demo3.jpg"></div>
+      <div class="slide"><span>Web</span><img src="demo4.jpg"></div>
     </div>
   </div>
 
   <div class="stats">
-    <div class="stat"><strong data-count="15">0</strong><span>Proyectos entregados</span></div>
-    <div class="stat"><strong data-count="98">0</strong><span>Satisfacción</span></div>
-    <div class="stat"><strong data-count="2">0</strong><span>Países</span></div>
-  </div>
-
-  <div class="elite">
-    <h2>Esto no es para todos</h2>
-    <p>
-      Trabajamos con negocios que quieren verse grandes,
-      vender más y diferenciarse.
-      Si buscas algo barato, este no es tu sitio.
-    </p>
+    <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
+    <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
+    <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
   </div>
 </section>
 
-<footer>© 2025 ZenSite · Premium Digital Presence</footer>
+<section class="final">
+  <h2>Esto es solo una demostración</h2>
+  <p>
+    Cada proyecto se diseña desde cero según el negocio,
+    la marca y los objetivos del cliente.  
+    No usamos plantillas genéricas.  
+    Todo es personalizado, escalable y pensado para vender.
+  </p>
+</section>
 
-<!-- FLOAT BUTTONS -->
-<div class="floats">
-  <a class="float" href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
-  <a class="float" href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
-  <a class="float" href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
-  <a class="float" href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
+<footer>
+  © 2025 ZenSite · Diseño web premium
+</footer>
+
+<div class="floating">
+  <a href="https://olivahr.github.io/demohomepage-/">Home Page</a>
+  <a href="https://olivahr.github.io/pruebamirandaflow/">Store</a>
+  <a href="https://olivahr.github.io/demostore/">Store 2</a>
+  <a href="https://olivahr.github.io/demobarberweb/">Web</a>
 </div>
 
 <script>
-/* SLIDER */
-const track=document.getElementById("track");
-let i=0;
+/* ===== SLIDER AUTO ===== */
+const track = document.getElementById("track");
+let idx = 0;
 setInterval(()=>{
-  i=(i+1)%track.children.length;
-  track.style.transform=`translateX(-${i*100}%)`;
+  idx = (idx+1)%4;
+  track.style.transform = `translateX(-${idx*100}%)`;
 },4200);
 
-/* COUNTERS */
-document.querySelectorAll("[data-count]").forEach(el=>{
-  let n=0,target=+el.dataset.count;
-  const t=setInterval(()=>{
-    n++;
-    el.textContent=n;
-    if(n>=target)clearInterval(t);
-  },20);
+/* ===== COUNTERS ===== */
+const stats = document.querySelectorAll(".stat");
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(!e.isIntersecting) return;
+    e.target.classList.add("show");
+    const num = e.target.querySelector("[data-count]");
+    if(num.dataset.done) return;
+    num.dataset.done = "1";
+    let n = 0;
+    const target = +num.dataset.count;
+    const step = Math.max(1, Math.floor(target/40));
+    const t = setInterval(()=>{
+      n += step;
+      if(n >= target){ n = target; clearInterval(t); }
+      num.textContent = n;
+    },28);
+  });
+},{threshold:.4});
+stats.forEach(s=>observer.observe(s));
+
+/* ===== PAGE TRANSITION ===== */
+document.querySelectorAll("a").forEach(a=>{
+  a.addEventListener("click", e=>{
+    const href = a.getAttribute("href");
+    if(href && !href.startsWith("#")){
+      e.preventDefault();
+      document.getElementById("transition").classList.add("active");
+      setTimeout(()=>window.location.href=href,350);
+    }
+  });
 });
 </script>
 
