--- a/demo.html
+++ b/demo.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ZenSite | Demo Premium</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>ZenSite | Demos Profesionales</title>
 
 <style>
 :root{
   --bg:#050505;
-  --glass:rgba(18,18,18,.88);
-  --line:rgba(255,255,255,.12);
-  --muted:rgba(255,255,255,.75);
+  --line:rgba(255,255,255,.10);
+  --glass:rgba(20,20,20,.82);
+  --muted:rgba(255,255,255,.78);
   --muted2:rgba(255,255,255,.55);
-  --radius:26px;
+  --r:26px;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
-
 body{
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",system-ui,sans-serif;
+  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:var(--bg);
   color:#fff;
   overflow-x:hidden;
@@ -26,85 +25,57 @@ body{
 
 /* ===== HEADER ===== */
 .header{
-  position:fixed;
-  top:0; left:0; width:100%;
+  position:fixed; top:0; left:0; width:100%;
   padding:18px 22px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+  display:flex; align-items:center; justify-content:space-between;
   background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.35), transparent);
   z-index:1000;
 }
-.brand{
-  font-size:22px;
-  font-weight:900;
-  letter-spacing:.4px;
-}
-.langs span{
-  cursor:pointer;
-  font-weight:800;
-  opacity:.55;
-  margin-left:14px;
-}
+.brand{font-weight:900;font-size:20px}
+.langs{display:flex;gap:14px}
+.langs span{cursor:pointer;opacity:.55;font-weight:800}
 .langs span.active{opacity:1}
 
 /* ===== HERO ===== */
 .hero{
-  padding:150px 8% 120px;
+  padding:140px 8% 120px;
 }
 .hero h1{
   font-size:clamp(42px,6vw,74px);
   font-weight:950;
-  line-height:1.02;
+  line-height:1.05;
 }
 .hero p{
   margin-top:18px;
-  max-width:900px;
+  max-width:820px;
   font-size:18px;
   color:var(--muted);
 }
 
 /* ===== SLIDER ===== */
 .slider{
-  margin:80px auto 0;
+  margin:80px auto;
   max-width:1200px;
-  border-radius:var(--radius);
-  border:1px solid var(--line);
+  border-radius:var(--r);
   overflow:hidden;
-  background:#000;
-  box-shadow:0 40px 120px rgba(0,0,0,.75);
+  border:1px solid var(--line);
 }
-.track{
-  display:flex;
-  transition:transform .65s cubic-bezier(.2,.9,.2,1);
-}
-.slide{
-  min-width:100%;
-  position:relative;
-}
+.track{display:flex;transition:transform .6s ease}
+.slide{min-width:100%;position:relative}
 .slide img{
   width:100%;
-  height:clamp(340px,52vh,540px);
+  height:420px;
   object-fit:cover;
-  display:block;
-}
-.slide span{
-  position:absolute;
-  top:16px; left:16px;
-  background:rgba(0,0,0,.65);
-  border:1px solid var(--line);
-  padding:8px 14px;
-  border-radius:999px;
-  font-weight:800;
-  font-size:13px;
 }
 
 /* ===== STATS ===== */
 .stats{
-  margin-top:90px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:22px;
+  margin:100px auto 80px;
+  max-width:1100px;
+  padding:0 6%;
 }
 .stat{
   background:var(--glass);
@@ -112,191 +83,169 @@ body{
   border-radius:22px;
   padding:36px 18px;
   text-align:center;
-  backdrop-filter:blur(14px);
-  opacity:0;
-  transform:translateY(14px);
-  transition:.6s ease;
-}
-.stat.show{
-  opacity:1;
-  transform:translateY(0);
 }
 .stat strong{
-  font-size:46px;
+  font-size:52px;
   font-weight:950;
 }
 .stat span{
   display:block;
-  margin-top:8px;
-  font-weight:800;
+  margin-top:6px;
   color:var(--muted2);
+  font-weight:800;
+}
+
+/* ===== FLOATING DEMO BUTTONS (CENTRAL ONLY) ===== */
+.demo-zone{
+  position:relative;
+  height:260px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+.demo-buttons{
+  position:absolute;
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+}
+.demo-buttons a{
+  padding:14px 22px;
+  border-radius:999px;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.22);
+  color:#fff;
+  font-weight:900;
+  letter-spacing:.4px;
+  text-decoration:none;
+  backdrop-filter: blur(12px);
+  text-align:center;
+  transition:.25s ease;
+}
+.demo-buttons a:hover{
+  background:#fff;
+  color:#000;
+  transform:scale(1.05);
 }
 
 /* ===== FINAL TEXT ===== */
 .final{
-  margin:120px auto 80px;
-  max-width:920px;
+  max-width:980px;
+  margin:120px auto 140px;
+  padding:0 8%;
   text-align:center;
 }
 .final h2{
-  font-size:36px;
+  font-size:clamp(30px,4.5vw,48px);
   font-weight:950;
-  margin-bottom:18px;
 }
 .final p{
+  margin-top:20px;
   font-size:17px;
   color:var(--muted);
-  line-height:1.6;
+  line-height:1.7;
 }
 
 /* ===== FOOTER ===== */
 footer{
+  padding:40px 20px;
   text-align:center;
-  padding:34px 20px;
   font-size:13px;
-  opacity:.55;
+  opacity:.5;
   border-top:1px solid var(--line);
 }
-
-/* ===== FLOATING BUTTONS ===== */
-.floating{
-  position:fixed;
-  right:18px;
-  bottom:18px;
-  display:flex;
-  flex-direction:column;
-  gap:12px;
-  z-index:2000;
-}
-.floating a{
-  padding:14px 18px;
-  border-radius:999px;
-  background:#111;
-  border:1px solid var(--line);
-  color:#fff;
-  font-weight:900;
-  font-size:13px;
-  text-decoration:none;
-  box-shadow:0 20px 40px rgba(0,0,0,.6);
-  transition:.25s ease;
-}
-.floating a:hover{
-  transform:translateY(-2px);
-  background:#fff;
-  color:#000;
-}
-
-/* ===== PAGE TRANSITION ===== */
-#transition{
-  position:fixed;
-  inset:0;
-  background:#050505;
-  opacity:0;
-  pointer-events:none;
-  transition:opacity .35s ease;
-  z-index:9999;
-}
-#transition.active{opacity:1}
 </style>
 </head>
 
 <body>
 
-<div id="transition"></div>
-
 <header class="header">
   <div class="brand">ZenSite</div>
   <div class="langs">
-    <span class="active">ES</span>
-    <span>EN</span>
+    <span class="active" data-lang="es">ES</span>
+    <span data-lang="en">EN</span>
   </div>
 </header>
 
 <section class="hero">
-  <h1>Demostraciones Premium</h1>
-  <p>
-    Ejemplos reales de páginas web, tiendas online y sistemas diseñados
-    para convertir clientes y elevar la presencia digital de cualquier negocio.
+  <h1 data-es="Demostraciones profesionales"
+      data-en="Professional demonstrations">
+      Demostraciones profesionales
+  </h1>
+  <p data-es="Explora ejemplos reales de sitios web diseñados para negocios que buscan presencia, confianza y resultados."
+     data-en="Explore real examples of websites designed for businesses that seek presence, trust, and results.">
+     Explora ejemplos reales de sitios web diseñados para negocios que buscan presencia, confianza y resultados.
   </p>
-
-  <div class="slider">
-    <div class="track" id="track">
-      <div class="slide"><span>Home Page</span><img src="demo1.jpg"></div>
-      <div class="slide"><span>Store</span><img src="demo2.jpg"></div>
-      <div class="slide"><span>Store 2</span><img src="demo3.jpg"></div>
-      <div class="slide"><span>Web</span><img src="demo4.jpg"></div>
-    </div>
-  </div>
-
-  <div class="stats">
-    <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
-    <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
-    <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
-  </div>
 </section>
 
+<!-- SLIDER -->
+<div class="slider">
+  <div class="track" id="track">
+    <div class="slide"><img src="demo1.jpg"></div>
+    <div class="slide"><img src="demo2.jpg"></div>
+    <div class="slide"><img src="demo3.jpg"></div>
+  </div>
+</div>
+
+<!-- STATS -->
+<div class="stats">
+  <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
+  <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
+  <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
+</div>
+
+<!-- DEMO BUTTONS ZONE -->
+<div class="demo-zone">
+  <div class="demo-buttons">
+    <a href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
+    <a href="https://olivahr.github.io/pruebamirandaflow/" target="_blank">Store</a>
+    <a href="https://olivahr.github.io/demostore/" target="_blank">Store 2</a>
+    <a href="https://olivahr.github.io/demobarberweb/" target="_blank">Web</a>
+  </div>
+</div>
+
+<!-- FINAL MESSAGE -->
 <section class="final">
   <h2>Esto es solo una demostración</h2>
   <p>
-    Cada proyecto se diseña desde cero según el negocio,
-    la marca y los objetivos del cliente.  
-    No usamos plantillas genéricas.  
-    Todo es personalizado, escalable y pensado para vender.
+    Cada proyecto que desarrollamos se diseña <strong>desde cero</strong>, adaptado al negocio, la marca y los objetivos reales del cliente.
+    <br><br>
+    <strong>No utilizamos plantillas genéricas.</strong>
+    <br><br>
+    Todos los sistemas se entregan correctamente instalados, optimizados y conectados
+    (dominio, hosting, formularios, pagos, analítica si aplica),
+    listos para operar como debe ser.
+    <br><br>
+    El diseño, la estructura y la tecnología se construyen para convertir,
+    escalar y representar la marca a nivel profesional.
   </p>
 </section>
 
 <footer>
-  © 2025 ZenSite · Diseño web premium
+  © 2025 ZenSite · Desarrollo web profesional
 </footer>
 
-<div class="floating">
-  <a href="https://olivahr.github.io/demohomepage-/">Home Page</a>
-  <a href="https://olivahr.github.io/pruebamirandaflow/">Store</a>
-  <a href="https://olivahr.github.io/demostore/">Store 2</a>
-  <a href="https://olivahr.github.io/demobarberweb/">Web</a>
-</div>
-
 <script>
-/* ===== SLIDER AUTO ===== */
-const track = document.getElementById("track");
-let idx = 0;
-setInterval(()=>{
-  idx = (idx+1)%4;
-  track.style.transform = `translateX(-${idx*100}%)`;
-},4200);
-
 /* ===== COUNTERS ===== */
-const stats = document.querySelectorAll(".stat");
-const observer = new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(!e.isIntersecting) return;
-    e.target.classList.add("show");
-    const num = e.target.querySelector("[data-count]");
-    if(num.dataset.done) return;
-    num.dataset.done = "1";
-    let n = 0;
-    const target = +num.dataset.count;
-    const step = Math.max(1, Math.floor(target/40));
-    const t = setInterval(()=>{
-      n += step;
-      if(n >= target){ n = target; clearInterval(t); }
-      num.textContent = n;
-    },28);
-  });
-},{threshold:.4});
-stats.forEach(s=>observer.observe(s));
-
-/* ===== PAGE TRANSITION ===== */
-document.querySelectorAll("a").forEach(a=>{
-  a.addEventListener("click", e=>{
-    const href = a.getAttribute("href");
-    if(href && !href.startsWith("#")){
-      e.preventDefault();
-      document.getElementById("transition").classList.add("active");
-      setTimeout(()=>window.location.href=href,350);
-    }
-  });
+document.querySelectorAll("[data-count]").forEach(el=>{
+  const target = +el.dataset.count;
+  let n = 0;
+  const step = Math.max(1, Math.floor(target/40));
+  const t = setInterval(()=>{
+    n += step;
+    if(n >= target){ n = target; clearInterval(t); }
+    el.textContent = n;
+  }, 30);
 });
+
+/* ===== LANG ===== */
+const langBtns = document.querySelectorAll(".langs span");
+const transEls = document.querySelectorAll("[data-es]");
+function setLang(l){
+  langBtns.forEach(b=>b.classList.toggle("active", b.dataset.lang===l));
+  transEls.forEach(el => el.textContent = el.dataset[l]);
+}
+langBtns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
 </script>
 
 </body>
