--- a/demo.html
+++ b/demo.html
@@ -8,16 +8,16 @@
 <style>
 :root{
   --bg:#050505;
+  --glass:rgba(18,18,18,.85);
   --line:rgba(255,255,255,.10);
-  --glass:rgba(20,20,20,.82);
-  --muted:rgba(255,255,255,.78);
+  --muted:rgba(255,255,255,.75);
   --muted2:rgba(255,255,255,.55);
-  --r:26px;
+  --radius:26px;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",system-ui,sans-serif;
   background:var(--bg);
   color:#fff;
   overflow-x:hidden;
@@ -25,67 +25,86 @@ body{
 
 /* ===== HEADER ===== */
 .header{
-  position:fixed; top:0; left:0; width:100%;
+  position:fixed;
+  inset:0 0 auto 0;
   padding:18px 22px;
-  display:flex; align-items:center; justify-content:space-between;
-  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.35), transparent);
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:linear-gradient(to bottom,rgba(0,0,0,.85),rgba(0,0,0,.45),transparent);
   z-index:1000;
 }
-.brand{font-weight:900;font-size:20px}
-.langs{display:flex;gap:14px}
-.langs span{cursor:pointer;opacity:.55;font-weight:800}
+.brand{
+  font-weight:900;
+  font-size:20px;
+  letter-spacing:.3px;
+}
+.langs span{
+  margin-left:14px;
+  cursor:pointer;
+  font-weight:800;
+  opacity:.5;
+}
 .langs span.active{opacity:1}
 
 /* ===== HERO ===== */
 .hero{
-  padding:140px 8% 120px;
+  padding:150px 8% 120px;
 }
 .hero h1{
-  font-size:clamp(42px,6vw,74px);
+  font-size:clamp(42px,6vw,76px);
   font-weight:950;
   line-height:1.05;
 }
 .hero p{
-  margin-top:18px;
-  max-width:820px;
+  margin-top:20px;
+  max-width:860px;
   font-size:18px;
   color:var(--muted);
 }
 
 /* ===== SLIDER ===== */
 .slider{
-  margin:80px auto;
   max-width:1200px;
-  border-radius:var(--r);
+  margin:80px auto;
+  border-radius:var(--radius);
   overflow:hidden;
   border:1px solid var(--line);
+  background:#000;
 }
-.track{display:flex;transition:transform .6s ease}
-.slide{min-width:100%;position:relative}
+.track{
+  display:flex;
+  transition:transform .7s cubic-bezier(.2,.9,.2,1);
+}
+.slide{
+  min-width:100%;
+  position:relative;
+}
 .slide img{
   width:100%;
-  height:420px;
+  height:480px;
   object-fit:cover;
+  filter:contrast(1.05) saturate(1.04);
 }
 
 /* ===== STATS ===== */
 .stats{
+  max-width:1100px;
+  margin:100px auto 70px;
+  padding:0 6%;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
   gap:22px;
-  margin:100px auto 80px;
-  max-width:1100px;
-  padding:0 6%;
 }
 .stat{
   background:var(--glass);
   border:1px solid var(--line);
   border-radius:22px;
-  padding:36px 18px;
+  padding:40px 18px;
   text-align:center;
 }
 .stat strong{
-  font-size:52px;
+  font-size:54px;
   font-weight:950;
 }
 .stat span{
@@ -95,55 +114,54 @@ body{
   font-weight:800;
 }
 
-/* ===== FLOATING DEMO BUTTONS (CENTRAL ONLY) ===== */
+/* ===== FLOATING DEMO BUTTONS (APPLE STYLE) ===== */
 .demo-zone{
   position:relative;
-  height:260px;
+  height:300px;
   display:flex;
   align-items:center;
   justify-content:center;
 }
 .demo-buttons{
-  position:absolute;
   display:flex;
   flex-direction:column;
   gap:14px;
 }
 .demo-buttons a{
-  padding:14px 22px;
+  padding:14px 26px;
   border-radius:999px;
-  background:rgba(0,0,0,.55);
+  background:rgba(255,255,255,.08);
   border:1px solid rgba(255,255,255,.22);
+  backdrop-filter:blur(14px);
   color:#fff;
   font-weight:900;
-  letter-spacing:.4px;
+  letter-spacing:.3px;
   text-decoration:none;
-  backdrop-filter: blur(12px);
   text-align:center;
   transition:.25s ease;
 }
 .demo-buttons a:hover{
   background:#fff;
   color:#000;
-  transform:scale(1.05);
+  transform:scale(1.06);
 }
 
 /* ===== FINAL TEXT ===== */
 .final{
   max-width:980px;
-  margin:120px auto 140px;
+  margin:120px auto 160px;
   padding:0 8%;
   text-align:center;
 }
 .final h2{
-  font-size:clamp(30px,4.5vw,48px);
+  font-size:clamp(32px,4.5vw,52px);
   font-weight:950;
 }
 .final p{
-  margin-top:20px;
+  margin-top:22px;
   font-size:17px;
   color:var(--muted);
-  line-height:1.7;
+  line-height:1.75;
 }
 
 /* ===== FOOTER ===== */
@@ -153,6 +171,12 @@ footer{
   font-size:13px;
   opacity:.5;
   border-top:1px solid var(--line);
+}
+
+/* ===== MOBILE ===== */
+@media(max-width:600px){
+  .slide img{height:380px}
+  .demo-zone{height:260px}
 }
 </style>
 </head>
@@ -173,28 +197,30 @@ footer{
       Demostraciones profesionales
   </h1>
   <p data-es="Explora ejemplos reales de sitios web diseñados para negocios que buscan presencia, confianza y resultados."
-     data-en="Explore real examples of websites designed for businesses that seek presence, trust, and results.">
+     data-en="Explore real examples of websites designed for businesses seeking presence, trust and results.">
      Explora ejemplos reales de sitios web diseñados para negocios que buscan presencia, confianza y resultados.
   </p>
 </section>
 
-<!-- SLIDER -->
+<!-- SLIDER DEMOS -->
 <div class="slider">
   <div class="track" id="track">
-    <div class="slide"><img src="demo1.jpg"></div>
-    <div class="slide"><img src="demo2.jpg"></div>
-    <div class="slide"><img src="demo3.jpg"></div>
+    <div class="slide"><img src="demo1.jpg" alt=""></div>
+    <div class="slide"><img src="demo2.jpg" alt=""></div>
+    <div class="slide"><img src="demo3.jpg" alt=""></div>
+    <div class="slide"><img src="demo4.jpg" alt=""></div>
+    <div class="slide"><img src="demo5.jpg" alt=""></div>
   </div>
 </div>
 
 <!-- STATS -->
 <div class="stats">
-  <div class="stat"><strong data-count="18">0</strong><span>Proyectos entregados</span></div>
-  <div class="stat"><strong data-count="3">0</strong><span>Países</span></div>
-  <div class="stat"><strong data-count="100">0</strong><span>Satisfacción</span></div>
+  <div class="stat"><strong data-count="18">0</strong><span data-es="Proyectos entregados" data-en="Projects delivered">Proyectos entregados</span></div>
+  <div class="stat"><strong data-count="3">0</strong><span data-es="Países" data-en="Countries">Países</span></div>
+  <div class="stat"><strong data-count="100">0</strong><span data-es="Satisfacción" data-en="Satisfaction">Satisfacción</span></div>
 </div>
 
-<!-- DEMO BUTTONS ZONE -->
+<!-- FLOATING DEMOS -->
 <div class="demo-zone">
   <div class="demo-buttons">
     <a href="https://olivahr.github.io/demohomepage-/" target="_blank">Home Page</a>
@@ -204,48 +230,55 @@ footer{
   </div>
 </div>
 
-<!-- FINAL MESSAGE -->
+<!-- FINAL -->
 <section class="final">
   <h2>Esto es solo una demostración</h2>
   <p>
-    Cada proyecto que desarrollamos se diseña <strong>desde cero</strong>, adaptado al negocio, la marca y los objetivos reales del cliente.
+    Cada proyecto se diseña <strong>desde cero</strong>, adaptado al negocio, la marca y los objetivos reales del cliente.
     <br><br>
     <strong>No utilizamos plantillas genéricas.</strong>
     <br><br>
-    Todos los sistemas se entregan correctamente instalados, optimizados y conectados
-    (dominio, hosting, formularios, pagos, analítica si aplica),
-    listos para operar como debe ser.
+    Todo se entrega correctamente instalado, optimizado y conectado como debe ser:
+    dominio, hosting, formularios, pagos, analítica y escalabilidad.
     <br><br>
-    El diseño, la estructura y la tecnología se construyen para convertir,
-    escalar y representar la marca a nivel profesional.
+    El diseño, la estructura y la tecnología se construyen para vender, posicionar y representar
+    la marca a nivel profesional.
   </p>
 </section>
 
 <footer>
-  © 2025 ZenSite · Desarrollo web profesional
+  © 2025 ZenSite · Desarrollo web premium
 </footer>
 
 <script>
+/* ===== SLIDER AUTO ===== */
+const track = document.getElementById("track");
+let index = 0;
+setInterval(()=>{
+  index = (index + 1) % track.children.length;
+  track.style.transform = `translateX(-${index * 100}%)`;
+},4500);
+
 /* ===== COUNTERS ===== */
 document.querySelectorAll("[data-count]").forEach(el=>{
   const target = +el.dataset.count;
   let n = 0;
-  const step = Math.max(1, Math.floor(target/40));
+  const inc = Math.max(1, Math.floor(target/40));
   const t = setInterval(()=>{
-    n += step;
+    n += inc;
     if(n >= target){ n = target; clearInterval(t); }
     el.textContent = n;
-  }, 30);
+  },30);
 });
 
 /* ===== LANG ===== */
-const langBtns = document.querySelectorAll(".langs span");
-const transEls = document.querySelectorAll("[data-es]");
+const btns = document.querySelectorAll(".langs span");
+const els = document.querySelectorAll("[data-es]");
 function setLang(l){
-  langBtns.forEach(b=>b.classList.toggle("active", b.dataset.lang===l));
-  transEls.forEach(el => el.textContent = el.dataset[l]);
+  btns.forEach(b=>b.classList.toggle("active",b.dataset.lang===l));
+  els.forEach(e=>e.textContent=e.dataset[l]);
 }
-langBtns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
+btns.forEach(b=>b.onclick=()=>setLang(b.dataset.lang));
 </script>
 
 </body>
